[project]
name = "shinyduck"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Fred Guth", email = "fredguth@fredguth.com"},
]
dependencies = [
    "duckdb",
    "shiny>=0.10.2",
    "pandas>=2.2.2",
    "shinywidgets>=0.3.2",
    "shinyswatch>=0.6.1",
    "itables>=2.1.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
