[tool.poetry]
name = "shinyduck"
version = "0.1.0"
description = ""
authors = ["Fred Guth <fredguth@fredguth.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.0.0"
shiny = "^1.0.0"
pandas = "^2.2.2"
shinywidgets = "^0.3.2"
shinyswatch = "^0.7.0"
itables = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
